# poap

./: LICENSE  README.md  command.py  config.yaml  design  file.py  log  main.py  notes  pyproject.toml  requirements.txt  setup.py  test.xlsx  tool.py
data/csv/: test.csv
data/excel/: sample.xlsx  sample_1.xlsx  temp.xlsx
data/json/: config.json
data/templates/: layout.csv  tasklist.py  tasks.csv  test1.csv  test3.csv
data/workbooks/: test.xlsx
samples/: sample.csv
src/: __init__.py  commands.py  main.py
src/poap/: __init__.py  __main__.py  calc.py  check.py  checks.py  commands.py  config.py  df.py  drawing.py  drawings.py  excel.py  export.py  gui.py  parse.py  svg.py  template.py  templates.py  utils.py
src/tool/: __init__.py  __main__.py  cli.py  commands.py  export.py  main.py
src/utils/: file_handling.py
tool/: commands.py
