[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poap"
version = "0.0.1"
authors = [
  { name="Richard Hayman-Joyce", email="haymanjoyce@gmail.com" },
]
description = "This is a 'Plan on a Page' tool."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/haymanjoyce/poap"
Issues = "https://github.com/haymanjoyce/poap/issues"
